Add very simple re-frame page